--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <label>BOC Login</label><select name="bocLogin"><option value="">Pending</option><option>Done</option></select>
             <label>OSA Evening</label><select name="osaEvening"><option value="">Pending</option><option>Done</option></select>
             <label>EMS Portal</label><select name="emsPortal"><option value="">Pending</option><option>Done</option></select>
-            <label>Pending GRN</label><input type="text" name="pendingGrn">
+            <label>Pending GRN</label><select name="pendingGrn"><option value="">Pending</option><option>Done</option></select>
             <label>Self Help</label><select name="selfHelp"><option value="">Pending</option><option>Done</option></select>
             <label>Near Expiry Check</label><select name="nearExpiry"><option value="">Pending</option><option>Done</option></select>
             <label>Cash Reco</label><select name="cashReco"><option value="">Pending</option><option>Done</option></select>
@@ -212,4 +212,5 @@
     });
 </script>
 </body>
+
 </html>
