--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <body>
 
 <div class="tabs">
-    <button class="tab-btn active" onclick="showTab('form')">DATA ENTRY</button>
+    <button class="tab-btn active" onclick="showTab('form')">FORM</button>
     <button class="tab-btn" onclick="showTab('db')">DASHBOARD</button>
 </div>
 
@@ -77,12 +77,12 @@
             <label>AI Count Correction (ID)</label><input type="text" name="aiCount">
             <label>JM Count Correction (ID)</label><input type="text" name="jmCount">
             <label>Articles List (ID)</label><input type="text" name="articles">
-            <label>OSA Morning</label><select name="osaMorning"><option value="">Pending</option><option>Done</option></select>
+            <label>On Shelf Availability Morning</label><select name="osaMorning"><option value="">Pending</option><option>Done</option></select>
             <label>F&V Dump (ID)</label><input type="text" name="fvDump">
             <label>Non F&V Dump (ID)</label><input type="text" name="nonFvDump">
             <label>PIS (ID)</label><input type="text" name="pis">
             <label>BOC Login</label><select name="bocLogin"><option value="">Pending</option><option>Done</option></select>
-            <label>OSA Evening</label><select name="osaEvening"><option value="">Pending</option><option>Done</option></select>
+            <label>On Shelf Availability Evening</label><select name="osaEvening"><option value="">Pending</option><option>Done</option></select>
             <label>EMS Portal</label><select name="emsPortal"><option value="">Pending</option><option>Done</option></select>
             <label>Pending GRN</label><select name="pendingGrn"><option value="">Pending</option><option>Done</option></select>
             <label>Self Help</label><select name="selfHelp"><option value="">Pending</option><option>Done</option></select>
@@ -214,3 +214,4 @@
 </body>
 
 </html>
+
