--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <option>T9T3</option><option>T9V5</option><option>T3GC</option><option>TM6O</option>
                 <option>T9T7</option><option>TM4Z</option><option>TM3J</option><option>TM5C</option>
                 <option>TN1B</option><option>TK5T</option><option>TN1T</option><option>T9H8</option>
-                <option>TM8T</option><option>TN1C</option><option>TBAE</option><option>TL1U</option>
+                <option>TM8T</option><option>TN1C</option><option>TBAE</option>
             </select>
         </div>
 
@@ -224,4 +224,5 @@
 </script>
 </body>
 </html>
+
 
