--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         label { display: block; margin-top: 14px; font-weight: 700; font-size: 0.9rem; color: #475569; }
         input, select { width: 100%; padding: 14px; margin-top: 6px; border: 1.5px solid #cbd5e1; border-radius: 10px; box-sizing: border-box; font-size: 16px; background: #fff; }
         
-        button#submitBtn { width: 100%; padding: 18px; background: var(--primary); color: white; border: none; border-radius: 12px; font-weight: bold; font-size: 1.1rem; cursor: pointer; box-shadow: 0 4px 15px rgba(37, 99, 235, 0.2); }
+        button#submitBtn { width: 50%; padding: 18px; background: var(--primary); color: white; border: none; border-radius: 12px; font-weight: bold; font-size: 1.1rem; cursor: pointer; box-shadow: 0 4px 15px rgba(37, 99, 235, 0.2); display: block; margin: 0 auto; }
         .export-btn { width: 100%; padding: 16px; background: var(--whatsapp); color: white; border: none; border-radius: 12px; font-weight: bold; cursor: pointer; margin-bottom: 15px; font-size: 1rem; }
         
         /* Dashboard High-Res Styling */
@@ -226,6 +226,7 @@ function exportLandscapeReport() {
 </script>
 </body>
 </html>
+
 
 
 
