--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <label>Consumable PI (Posting Doc No)</label><input type="text" name="consumablePi">
         </div>
 
-        <button type="submit" id="submitBtn">SUBMIT ALL ACTIVITIES</button>
+        <button type="submit" id="submitBtn">SUBMIT ACTIVITIES</button>
     </form>
 </div> 
 
@@ -226,6 +226,7 @@ function exportLandscapeReport() {
 </script>
 </body>
 </html>
+
 
 
 
