--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <span class="deadline-badge">10 AM</span>
             <h3>Deadline : 10 AM</h3>
             <label>RMS</label><select name="rms"><option value="">Pending</option><option>Done</option></select>
-            <label>OSA Morning</label><select name="osaMorning"><option value="">Pending</option><option>Done</option></select>
+            <label>On Shelf Availability Morning</label><select name="osaMorning"><option value="">Pending</option><option>Done</option></select>
             <label>EMS Portal Entry</label><select name="emsPortal"><option value="">Pending</option><option>Done</option></select>
             <label>AI Count Correction (Doc No)</label><input type="text" name="aiCount">
             <label>F&V Dump (Doc No)</label><input type="text" name="fvDump">
@@ -92,7 +92,7 @@
         <div class="section-card">
             <span class="deadline-badge">3 PM - 6 PM</span>
             <h3>Deadline : 3 PM - 6 PM</h3>
-            <label>OSA Evening</label><select name="osaEvening"><option value="">Pending</option><option>Done</option></select>
+            <label>On Shelf Availability Evening</label><select name="osaEvening"><option value="">Pending</option><option>Done</option></select>
             <label>Near Expiry Check</label><select name="nearExpiry"><option value="">Pending</option><option>Done</option></select>
             <label>JM Count Correction (Doc No)</label><input type="text" name="jmCount">
             <label>Articles from List (Doc No)</label><input type="text" name="articles">
@@ -226,3 +226,4 @@ function exportLandscapeReport() {
 </script>
 </body>
 </html>
+
