--- a/index.html
+++ b/index.html
@@ -63,7 +63,11 @@
                 <option>T9T3</option><option>T9V5</option><option>T3GC</option><option>TM6O</option>
                 <option>T9T7</option><option>TM4Z</option><option>TM3J</option><option>TM5C</option>
                 <option>TN1B</option><option>TK5T</option><option>TN1T</option><option>T9H8</option>
-                <option>TM8T</option><option>TN1C</option><option>TBAE</option>
+                <option>TM8T</option><option>TN1C</option><option>TBAE</option><option>U2JH</option>
+                <option>U1WR</option><option>U949</option><option>FRVE</option><option>U286</option>
+                <option>U1WP</option><option>2314</option><option>3035</option><option>3087</option>
+                <option>F1ZP</option><option>U1L2</option><option>U14V</option><option>TNI6</option>
+                <option>U086</option><option>U1OW</option><option>TKM7</option>
             </select>
         </div>
 
@@ -226,4 +230,5 @@ function exportLandscapeReport() {
 </script>
 </body>
 </html>
+
 
